@@ -1,4 +1,4 @@
-version = "2.2.1"
+version = "2.3-pre"
 
 if __name__ == "__main__":
     print version
